--- a/SportBoard.Data/SportBoard.Data.csproj
+++ b/SportBoard.Data/SportBoard.Data.csproj
@@ -78,9 +78,13 @@
     <Compile Include="DAL\Post.cs">
       <DependentUpon>SportBoardModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAL\Respositories\CommentRepository.cs" />
     <Compile Include="DAL\Respositories\FeedRepository.cs" />
+    <Compile Include="DAL\Respositories\ICommentRepository.cs" />
     <Compile Include="DAL\Respositories\IFeedRepository.cs" />
+    <Compile Include="DAL\Respositories\IPostRepository.cs" />
     <Compile Include="DAL\Respositories\IRepository.cs" />
+    <Compile Include="DAL\Respositories\PostRepository.cs" />
     <Compile Include="DAL\Respositories\Repository.cs" />
     <Compile Include="DAL\SportBoardModel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -110,6 +114,7 @@
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config" />
     <None Include="DAL\SportBoardModel.edmx.diagram">
       <DependentUpon>SportBoardModel.edmx</DependentUpon>
     </None>
