--- a/SportBoard.Data/SportBoard.Data.csproj
+++ b/SportBoard.Data/SportBoard.Data.csproj
@@ -65,6 +65,9 @@
     <Compile Include="DAL\Comment.cs">
       <DependentUpon>SportBoardModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAL\CommentUpvote.cs">
+      <DependentUpon>SportBoardModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAL\C__MigrationHistory.cs">
       <DependentUpon>SportBoardModel.tt</DependentUpon>
     </Compile>
@@ -87,8 +90,10 @@
     <Compile Include="DAL\Respositories\ImageRepository.cs" />
     <Compile Include="DAL\Respositories\IPostRepository.cs" />
     <Compile Include="DAL\Respositories\IRepository.cs" />
+    <Compile Include="DAL\Respositories\IUserRepository.cs" />
     <Compile Include="DAL\Respositories\PostRepository.cs" />
     <Compile Include="DAL\Respositories\Repository.cs" />
+    <Compile Include="DAL\Respositories\UserRepository.cs" />
     <Compile Include="DAL\SportBoardModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
