--- a/SportBoard.Web/SportBoard.Web.csproj
+++ b/SportBoard.Web/SportBoard.Web.csproj
@@ -315,6 +315,7 @@
     <Content Include="Views\Post\Details.cshtml" />
     <Content Include="Views\Feed\Feeds.cshtml" />
     <Content Include="Views\Feed\Index.cshtml" />
+    <Content Include="Views\Post\Posts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
