--- a/SportBoard.Web/SportBoard.Web.csproj
+++ b/SportBoard.Web/SportBoard.Web.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -316,6 +317,8 @@
     <Content Include="Views\Feed\Feeds.cshtml" />
     <Content Include="Views\Feed\Index.cshtml" />
     <Content Include="Views\Post\Posts.cshtml" />
+    <Content Include="Views\Shared\UpvoteDownvoteBtns.cshtml" />
+    <Content Include="Views\Shared\ThumbsUpDownBtns.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
