Add action and view to be able to see open feed deletion requests. Starting to implement the decision of admin.

--- a/SportBoard.Data/SportBoard.Data.csproj
+++ b/SportBoard.Data/SportBoard.Data.csproj
@@ -83,8 +83,10 @@
       <DependentUpon>SportBoardModel.tt</DependentUpon>
     </Compile>
     <Compile Include="DAL\Respositories\CommentRepository.cs" />
+    <Compile Include="DAL\Respositories\DeletionRequestRepository.cs" />
     <Compile Include="DAL\Respositories\FeedRepository.cs" />
     <Compile Include="DAL\Respositories\ICommentRepository.cs" />
+    <Compile Include="DAL\Respositories\IDeletionRequestRepository.cs" />
     <Compile Include="DAL\Respositories\IFeedRepository.cs" />
     <Compile Include="DAL\Respositories\IImageRepository.cs" />
     <Compile Include="DAL\Respositories\ImageRepository.cs" />
