--- a/SportBoard.Web/SportBoard.Web.csproj
+++ b/SportBoard.Web/SportBoard.Web.csproj
@@ -338,6 +338,7 @@
     <Content Include="Views\Comment\PostComments.cshtml" />
     <Content Include="Views\Comment\Edit.cshtml" />
     <Content Include="Views\Admin\Requests.cshtml" />
+    <Content Include="Views\Manage\UserHistory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
