JS to send selected history option to the manage controller - needs to be handled server side now

--- a/SportBoard.Web/SportBoard.Web.csproj
+++ b/SportBoard.Web/SportBoard.Web.csproj
@@ -341,6 +341,7 @@
     <Content Include="Views\Comment\Edit.cshtml" />
     <Content Include="Views\Admin\Requests.cshtml" />
     <Content Include="Views\Manage\UserHistory.cshtml" />
+    <Content Include="Views\Manage\History.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
