Add form and controller action to upload photo. AJAX is not posting to correct action - need to look at

--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ __pycache__/
 *.pyc
 /SportBoard.Web/AppSettings.config
 /SportBoard.Web/Content/images
+/SportBoard.Web/Content/Profile Pictures/philAvatar.PNG
