--- a/SportBoard.Web/SportBoard.Web.csproj
+++ b/SportBoard.Web/SportBoard.Web.csproj
@@ -256,6 +256,7 @@
     <Compile Include="Models\ViewModels\FeedCardViewModel.cs" />
     <Compile Include="Models\ViewModels\FeedFilterSortOptionsVM.cs" />
     <Compile Include="Models\ViewModels\FeedPostViewModel.cs" />
+    <Compile Include="Models\ViewModels\MainLayoutViewModel.cs" />
     <Compile Include="Models\ViewModels\PostCommentsCurrentUserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
