--- a/SportBoard.Web/packages.config
+++ b/SportBoard.Web/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="AutoMapper" version="8.0.0" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Glimpse" version="1.8.6" targetFramework="net461" />
@@ -47,6 +48,7 @@
   <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
