--- a/SportBoard.Web/SportBoard.Web.csproj
+++ b/SportBoard.Web/SportBoard.Web.csproj
@@ -273,7 +273,7 @@
     <Compile Include="Models\ViewModels\FeedPostViewModel.cs" />
     <Compile Include="Models\ViewModels\PostCommentsCurrentUserViewModel.cs" />
     <Compile Include="Models\DTOs\FeedDto.cs" />
-    <Compile Include="Models\DTOs\PostAPI.cs" />
+    <Compile Include="Models\DTOs\PostDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
