Migrate Sportboard DB to Azure SQL

--- a/SportBoard.Web/Web.config
+++ b/SportBoard.Web/Web.config
@@ -10,7 +10,7 @@
   <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
     <add name="IdentityDbContext" connectionString="Data Source=PHILSPC;initial catalog=Sportboard;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="SportboardDbContext" connectionString="metadata=res://*/DAL.SportBoardModel.csdl|res://*/DAL.SportBoardModel.ssdl|res://*/DAL.SportBoardModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PHILSPC;initial catalog=Sportboard;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SportboardDbContext" connectionString="metadata=res://*/DAL.SportBoardModel.csdl|res://*/DAL.SportBoardModel.ssdl|res://*/DAL.SportBoardModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pblocalazure.database.windows.net;initial catalog=Sportboard;user id=loc_admin;password=sunAutumnbicycle82;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings configSource="AppSettings.config"></appSettings>
   <system.web>
