--- a/SportBoard.Web/SportBoard.Web.csproj
+++ b/SportBoard.Web/SportBoard.Web.csproj
@@ -298,6 +298,7 @@
     <Content Include="Content\zocial.eot" />
     <Content Include="Content\zocial.ttf" />
     <Content Include="Content\zocial.woff" />
+    <None Include="Properties\PublishProfiles\SportBoard - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jasny-bootstrap.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
