--- a/SportBoard.Web/Web.config
+++ b/SportBoard.Web/Web.config
@@ -28,6 +28,7 @@
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="TelemetryCorrelationHttpModule" />
+      <remove name="RoleManager"/>
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
