Add route constraint to check if post exists before hitting action

--- a/SportBoard.Web/SportBoard.Web.csproj
+++ b/SportBoard.Web/SportBoard.Web.csproj
@@ -229,6 +229,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="APIBLL\RouteConstraints\ValidFeedConstraint.cs" />
+    <Compile Include="APIBLL\RouteConstraints\ValidPostConstraint.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
