Action to get all comments by a given post Id, with custom constraint to check for valid post.

--- a/SportBoard.Web/SportBoard.Web.csproj
+++ b/SportBoard.Web/SportBoard.Web.csproj
@@ -228,8 +228,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="APIBLL\RouteConstraints\ValidFeedConstraint.cs" />
-    <Compile Include="APIBLL\RouteConstraints\ValidPostConstraint.cs" />
+    <Compile Include="API.BLL\RouteConstraints\ValidFeedConstraint.cs" />
+    <Compile Include="API.BLL\RouteConstraints\ValidPostConstraint.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
