Add enum to UserNotification.NotificationType - need to see if this can be generated from database

--- a/SportBoard.Data/SportBoard.Data.csproj
+++ b/SportBoard.Data/SportBoard.Data.csproj
@@ -82,6 +82,9 @@
     <Compile Include="DAL\NotificationType.cs">
       <DependentUpon>SportBoardModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAL\NotificationTypes.cs">
+      <DependentUpon>SportBoardModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAL\Post.cs">
       <DependentUpon>SportBoardModel.tt</DependentUpon>
     </Compile>
