--- a/SportBoard.Data/SportBoard.Data.csproj
+++ b/SportBoard.Data/SportBoard.Data.csproj
@@ -98,10 +98,12 @@
     <Compile Include="DAL\Respositories\ImageRepository.cs" />
     <Compile Include="DAL\Respositories\IPostRepository.cs" />
     <Compile Include="DAL\Respositories\IRepository.cs" />
+    <Compile Include="DAL\Respositories\IUserNotificationRepository.cs" />
     <Compile Include="DAL\Respositories\IUserPreferenceRepository.cs" />
     <Compile Include="DAL\Respositories\IUserRepository.cs" />
     <Compile Include="DAL\Respositories\PostRepository.cs" />
     <Compile Include="DAL\Respositories\Repository.cs" />
+    <Compile Include="DAL\Respositories\UserNotificationRepository.cs" />
     <Compile Include="DAL\Respositories\UserPreferenceRepository.cs" />
     <Compile Include="DAL\Respositories\UserRepository.cs" />
     <Compile Include="DAL\spFeed_GetAllByUserId_Result.cs">
