Start of displaying unread notifications in nav bar - need to be able to hit API from JS and read back data to display

--- a/SportBoard.Web/SportBoard.Web.csproj
+++ b/SportBoard.Web/SportBoard.Web.csproj
@@ -266,6 +266,7 @@
     <Compile Include="Controllers\WebApi\CommentController.cs" />
     <Compile Include="Controllers\WebApi\FeedController.cs" />
     <Compile Include="Controllers\WebApi\PostController.cs" />
+    <Compile Include="Controllers\WebApi\UserNotificationController.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
