--- a/SportBoard.Web/packages.config
+++ b/SportBoard.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoMapper" version="8.0.0" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Forloop.HtmlHelpers" version="1.2.0.0" targetFramework="net461" />
   <package id="Glimpse" version="1.8.6" targetFramework="net461" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net461" />
   <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net461" />
